<resources>
    <string name="app_name">RetrofitRxJavaDemo</string>
    <string name="allow">允许</string>
    <string name="deny">禁止</string>
    <string name="rationale">下载文件，需要使用读写权限</string>
    <string name="rx_java_operator">RxJava操作符</string>
    <string name="test_rxjava_operator">测试RxJava操作符</string>
    <string name="test_rxbus">测试RxBus</string>
    <string name="test_okhttp">测试只使用OkHttp</string>
    <string name="test_net_speed">测试网速</string>
    <string name="test_rxbinding">测试RxBinding</string>
    <string name="create">create</string>
    <string name="amb">amb</string>
    <string name="sequenceEqual">sequenceEqual</string>
    <string name="skipUntil">skipUntil</string>
    <string name="skipWhile">skipWhile</string>
    <string name="takeUntil">takeUntil</string>
    <string name="takeWhile">takeWhile</string>
    <string name="join">join</string>
    <string name="transform">transform</string>
    <string name="parallel">parallel</string>
    <string name="ref_count">refCount</string>
    <string name="connect">connect</string>
    <string name="btn_default_if_empty">btn_default_if_empty</string>
    <string name="take">take</string>
    <string name="defer">defer</string>
    <string name="from">from</string>
    <string name="interval">interval</string>
    <string name="range">range</string>
    <string name="repeat_when">repeat_when</string>
    <string name="retry_when">retry_when</string>
    <string name="repeat">repeat</string>
    <string name="buffer">buffer</string>
    <string name="window">window</string>
    <string name="flatmap">flatMap</string>
    <string name="group_by">group_by</string>
    <string name="scan">scan</string>
    <string name="debounce">debounce</string>
    <string name="sample">sample</string>
    <string name="skip">skip</string>
    <string name="skip_last">skip_last</string>
    <string name="combinelatest">combineLatest</string>
    <string name="zip">zip</string>
    <string name="zip_delay_error">zip delay error</string>
    <string name="use_catch">use_catch</string>
    <string name="retry">retry</string>
    <string name="delay">delay</string>
    <string name="use_do">do</string>
    <string name="use_to">observable transform to other data structure</string>
    <string name="reduce">reduce</string>
    <string name="concat">concat</string>
    <string name="throttlewithtimeout">throttleWithTimeOut</string>
    <string name="single">single</string>
    <string name="rxjava2_source_code">RxJava2 source code</string>
    <string name="rxjava2">RxJava2</string>
    <string name="retrofit_rxjava">retrofit结合RxJava使用</string>
    <string name="get_movie">豆瓣电影top250</string>
    <string name="get_today_weather">获取今天的天气</string>
    <string name="get_history_weather">获取历史天气信息</string>
    <string name="pm2_5">获取PM2.5</string>
    <string name="start_download">开始下载</string>
    <string name="test_install">测试安装</string>
    <string name="user_okhttp_download">使用OkHttp下载</string>
    <string name="save_failed">保存失败</string>
    <string name="test_download">带进度Dialog的下载</string>
    <string name="cancel_download">取消下载</string>
    <string name="progress_format">%1d KB %2d KB</string>
    <string name="download">下载</string>
    <string name="wait_download_finish">正在下载，请稍后...</string>
    <string name="simple_use_no_calladapter_factory_converter_factory">简单使用，不添加任何CallAdapter.Factory和Converter.Factory</string>
    <string name="click_event">click event</string>
    <string name="long_click_event">long click event</string>
    <string name="prevent_repeat_click_event">prevent repeat click event</string>
    <string name="get_validation_code">获取验证码</string>
    <string name="login">login</string>
    <string name="post_simple_event">post SimpleEvent</string>
    <string name="relay">relay</string>
    <string name="stick_event">stick event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
