<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.RxBindingActivity">

        <Button
            android:id="@+id/btn_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_event"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_long_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/long_click_event"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_prevent_repeat_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prevent_repeat_click_event"
            android:textAllCaps="false" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="please input phone number"
                android:inputType="number" />

            <Button
                android:id="@+id/btn_get_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/get_validation_code"
                android:textAllCaps="false" />

        </RelativeLayout>


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="please input password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_login"
            android:enabled="false"
            android:text="@string/login"
            android:textAllCaps="false" />

    </LinearLayout>

</layout>
