<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.activity.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_test_rxbinding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/test_rxbinding"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_test_rxjava_operator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/test_rxjava_operator" />

            <Button
                android:id="@+id/btn_retrofit_rxjava"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/retrofit_rxjava"
                android:textAllCaps="false" />

            <!-- <Button
                 android:id="@+id/btn_upload_file_activity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="onClick"
                 android:text="测试上传文件" />-->

            <Button
                android:id="@+id/btn_upload_okhttp_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/user_okhttp_download"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_user_DownloadManager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="使用系统自带的DownloadManager"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_only_retrofit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="只使用Retrofit"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_source_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/rxjava2_source_code"
                android:textAllCaps="false" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>

