<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/activity_retrofit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="getNowWeather"
                android:text="@string/get_today_weather" />

            <TextView
                android:id="@+id/text_weather_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="展示结果" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="getPM"
                android:text="@string/pm2_5" />

            <TextView
                android:id="@+id/text_pm_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="展示结果" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="getHistoryWeather"
                android:text="@string/get_history_weather" />

            <TextView
                android:id="@+id/text_history_weather_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="展示结果" />

            <Button
                android:id="@+id/btn_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="onClick"
                android:text="@string/test_download"
                android:textAllCaps="false" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>

